Fix invisible slide in outline

--- a/src/root.scss
+++ b/src/root.scss
@@ -272,10 +272,6 @@ pre,
     position: relative;
     text-align: left;
 
-    &[hidden] {
-      display: none !important;
-    }
-
     &.title-slide > div {
       @extend .is-vcentered;
       text-align: center;
